# tollbooth-wasmcp

./: .gitignore  .gitleaks.toml  CHANGELOG.md  NOTICE  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: agentic-approval-merge.yml  agentic-auto-merge.yml  agentic-engineering.yml  agentic-escalation.yml  agentic-housekeeper.yml  agentic-pr-dialogue.yml  agentic-qa.yml  agentic-service-desk.yml  ci.yml  release.yml
bridge/: README.md  package.json  wrangler.jsonc
bridge/src/: index.js
crypto/: Cargo.toml  README.md
crypto/src/: bindings.rs  crypto_core.rs  lib.rs
crypto/testdata/: bootstrap-event-tollbooth-sample.json  vectors.json
crypto/wit/: world.wit
examples/weather-operator/: Makefile  app.py  spin.toml  weather.py
tests/: sample_tools_catalog.json  test_schema.py
tollbooth_wasmcp/: __init__.py  _version.py  binding.py  bootstrap.py  bundling.py  courier_relay.py  crypto.wasm  diagnostics.py  env.py  host.py  nip04_wasm.py  nip44_wasm.py  paths.py  poll_loop.py  schema.py  transport.py
tollbooth_wasmcp/_toplevel/: websocket.py
tollbooth_wasmcp/_toplevel/cryptography/hazmat/primitives/ciphers/: aead.py
tollbooth_wasmcp/_toplevel/fastmcp/: __init__.py
tollbooth_wasmcp/_toplevel/fastmcp/server/: dependencies.py
tollbooth_wasmcp/_toplevel/pynostr/: __init__.py  event.py  key.py
tollbooth_wasmcp/wit/: world.wit
